# Chalante

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  download.sh  start.sh
chalante/: Cargo.toml
chalante/src/: main.rs
hello-ratatui/: LICENSE  README.md
hello-ratatui/src/: main.rs
json-editor/src/: app.rs  ui.rs
learn/barista/: Cargo.toml
learn/barista/src/: main.rs
parlante/: Cargo.toml  build.rs
parlante/src/: app.rs  llama.rs  main.rs  ui.rs
ratatui-counter-app/src/: main.rs
scripts/: engine.sh  models.sh  scrappy.sh
src/: app.rs  download.rs  llama.rs  main.rs  ui.rs
tutorials/hello-ratatui/: Cargo.toml
tutorials/json-editor/: Cargo.toml
tutorials/json-editor/src/: app.rs
tutorials/ratatui-counter-app/: Cargo.toml
tutorials/ratatui-counter-app/src/: main.rs  tui.rs
