[package]
name = "parlante"
version = "0.1.0"
edition = "2024"

[features]
cuda = []

[build-dependencies]
cmake = "0.1"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
